--- a/src/app/themes/theme.scss
+++ b/src/app/themes/theme.scss
@@ -1,1 +1,9 @@
 // استایل‌های سراسری تم را در اینجا اضافه کنید
+
+.h-2-5rem {
+  height: 2.5rem; /* 40px */
+}
+
+.clickable {
+  cursor: pointer;
+}
