--- a/src/app/themes/theme.scss
+++ b/src/app/themes/theme.scss
@@ -1,9 +1,22 @@
 // استایل‌های سراسری تم را در اینجا اضافه کنید
+html,body {
+  padding: 0;
+  margin: 0;
+}
 
 .h-2-5rem {
-  height: 2.5rem; /* 40px */
+  height: 2.5rem;
 }
 
-.clickable {
-  cursor: pointer;
+.p-error {
+  color: #f87171; // red-400 or any suitable red
+  font-size: 0.875rem; // text-sm
 }
+
+/* input with error and focus */
+input.border-red-500:focus {
+  border-color: #f87171 !important; /* Tailwind's red-400 */
+  box-shadow: none !important;      /* remove default focus shadow */
+  outline: none !important;         /* remove default outline */
+}
+
