--- a/src/app/components/shared/inputs/password-input/password-input.component.html
+++ b/src/app/components/shared/inputs/password-input/password-input.component.html
@@ -31,14 +31,14 @@
 <div>
   @if (control.touched && control.errors) {
     @if (control.errors['required']) {
-      <small class="text-xs p-error block mt-1">
+      <p-message severity="error" variant="simple" size="small">
         وارد کردن رمز عبور الزامی است.
-      </small>
+      </p-message>
     }
     @else if (control.errors['minlength']) {
-      <small class="text-xs p-error block mt-1">
+      <p-message severity="error" variant="simple" size="small">
         رمز عبور باید حداقل {{ control.errors['minlength'].requiredLength }} کاراکتر باشد.
-      </small>
+      </p-message>
     }
   }
 </div>
