--- a/src/app/components/forms/forget-password-form/forget-password-form.component.html
+++ b/src/app/components/forms/forget-password-form/forget-password-form.component.html
@@ -1,4 +1,4 @@
-<form class="flex flex-column gap-6 mb-5">
+<form class="flex flex-column gap-6 mb-5" [formGroup]="forgetPasswordForm" (ngSubmit)="onSubmit()">
   <div class="flex flex-column gap-5">
     <h3 class="text-center">
       سامانه جامع حمل و نقل باری سازمان راهداری و حمل و نقل جاده‌ای استان اصفهان
@@ -12,7 +12,7 @@
   <app-phone-input [control]="phone" />
 
   <div class="flex flex-column gap-2 mb-5">
-    <p-button type="submit" styleClass="px-5 h-2-5rem w-full">
+    <p-button [disabled]="forgetPasswordForm.invalid" type="submit" styleClass="px-5 h-2-5rem w-full">
       تایید
     </p-button>
   </div>
