--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form class="flex flex-column gap-6">
+<form class="flex flex-column gap-6" [formGroup]="loginForm" (ngSubmit)="onSubmit()" >
   <h3 class="text-center mb-3">
     سامانه جامع حمل و نقل باری سازمان راهداری و حمل و نقل جاده‌ای استان اصفهان
   </h3>
@@ -10,11 +10,11 @@
       <app-password-input [control]="password" />
 
       <div class="flex justify-content-end w-full mb-1">
+
         <a
-          href="/auth/forget-password"
-          class="text-sm text-blue-400 cursor-pointer"
+        href="/auth/forget-password"
         >
-          رمز عبورتان را فراموش کردید؟
+        <p-button styleClass="text-cyan-500 text-shadow-sm text-sm" label="رمز عبورتان را فراموش کردید؟" [link]="true" />
         </a>
       </div>
     </div>
@@ -24,7 +24,7 @@
 
   <div class="flex flex-column gap-2 mb-5">
     <app-remember-me-input [control]="rememberMe" />
-    <p-button type="submit" styleClass="px-5 h-2-5rem w-full">
+    <p-button [disabled]="loginForm.invalid" type="submit"  styleClass="px-5 h-2-5rem w-full">
       ورود
     </p-button>
   </div>
