--- a/src/app/components/shared/inputs/phone-input/phone-input.component.html
+++ b/src/app/components/shared/inputs/phone-input/phone-input.component.html
@@ -23,23 +23,23 @@
 
   @if (control.touched) {
     @if (control.errors?.['required']) {
-      <small class="text-red-500 text-xs block">
+      <p-message severity="error" variant="simple" size="small">
         وارد کردن شماره تلفن الزامی است.
-      </small>
-    } @else if (control.errors?.['minlength']) {
-      <small class="text-red-500 text-xs block">
-        شماره تلفن باید حداقل {{ control.errors?.['minlength'].requiredLength }} کاراکتر باشد.
-      </small>
+      </p-message>
 
+    } @else if (control.errors?.['minlength']) {
+      <p-message severity="error" variant="simple" size="small">
+        شماره تلفن باید حداقل {{ control.errors?.['minlength'].requiredLength }} کاراکتر باشد.
+      </p-message>
     }
     @else if (control.errors?.['maxlength']) {
-      <small class="text-red-500 text-xs block">
+      <p-message severity="error" variant="simple" size="small">
         شماره تلفن باید حداکثر {{ control.errors?.['maxlength'].requiredLength }} کاراکتر باشد.
-      </small>
+      </p-message>
     } @else if (control.errors?.['pattern']) {
-      <small class="text-red-500 text-xs block">
+      <p-message severity="error" variant="simple" size="small">
         فرمت شماره تلفن صحیح نمی‌باشد.
-      </small>
+      </p-message>
     }
   }
 </div>
