--- a/src/app/themes/theme.scss
+++ b/src/app/themes/theme.scss
@@ -20,3 +20,18 @@ input.border-red-500:focus {
   outline: none !important;         /* remove default outline */
 }
 
+a{
+  text-decoration: none;
+}
+
+.text-shadow-sm {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.text-shadow-md {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.text-shadow-lg {
+  text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.35);
+}
