feat(login-form)[login-form]: add `captchaString` as input
This will take the captcha string from father component and then show it
inside it self.

--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <app-captcha-input [control]="captcha" />
+  <app-captcha-input [control]="captcha" [captchaString]="getCaptchaResult?.Captcha ?? ''"/>
 
   <div class="flex flex-column gap-2 mb-5">
     <app-remember-me-input [control]="rememberMe" />
