chore(components/forms/)[forget-password-form]: change some strings

--- a/src/app/components/forms/forget-password-form/forget-password-form.component.html
+++ b/src/app/components/forms/forget-password-form/forget-password-form.component.html
@@ -1,7 +1,7 @@
 <form class="flex flex-column gap-6 mb-5" [formGroup]="forgetPasswordForm" (ngSubmit)="onSubmit()">
   <div class="flex flex-column gap-5">
     <h3 class="text-center">
-      سامانه جامع حمل و نقل باری سازمان راهداری و حمل و نقل جاده‌ای استان اصفهان
+      سامانه جامع حمل و نقل کالا<br>اداره کل راهداری و حمل و نقل جاده ای استان اصفهان
     </h3>
 
     <p class="text-center">
