refactor: minor improvements for readability

--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -12,7 +12,7 @@
       <div class="flex justify-content-end w-full mb-1">
 
         <a
-        href="/auth/forget-password"
+        [href]="hrefForgetPassword"
         >
         <p-button styleClass="text-cyan-500 text-shadow-sm text-sm" label="رمز عبورتان را فراموش کردید؟" [link]="true" />
         </a>
