--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<p-toast [showTransformOptions]="'translateY(100%)'" [showTransformOptions]="'translateX(100%)'"/>
+<p-toast baseZIndex="100" position="top-center" [showTransformOptions]="'translateY(100%)'"
+  [showTransformOptions]="'translateX(100%)'" styleClass="max-w-95vw" />
 <router-outlet />
