add padding for login-page for small screen

--- a/src/app/pages/auth/login-page/login-page.component.html
+++ b/src/app/pages/auth/login-page/login-page.component.html
@@ -3,7 +3,7 @@
 imageUrl="background_form_login.webp"  />
 
 
-<div class="flex align-items-center justify-content-center md:justify-content-end md:ml-7 min-h-screen">
+<div class="flex align-items-center mx-4 justify-content-center md:justify-content-end md:ml-7 min-h-screen">
  <app-form-card class="login-from">
    <app-login-form />
  </app-form-card>
