--- a/src/app/pages/auth/forget-password-page/forget-password-page.component.html
+++ b/src/app/pages/auth/forget-password-page/forget-password-page.component.html
@@ -3,7 +3,7 @@
 imageUrl="background_form_login.webp"  />
 
 
-<div class="flex align-items-center justify-content-center md:justify-content-end md:ml-7 min-h-screen">
+<div class="flex align-items-center mx-4 justify-content-center md:justify-content-end md:ml-7 min-h-screen">
  <app-form-card class="forget-password-page">
    <app-forget-password-form />
  </app-form-card>
