fix(components/shared)[sub-menu]: fix dashboard drawer

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <app-header [headerData]="headerData" />
 
 
-<app-sidebar>
+<app-sidebar [menuItems]="menuItems">
   <div class="my-5 lg:my-2">
     <app-sub-menu [processes]="webProcesses" />
   </div>
