--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,8 +1,13 @@
 <app-header [headerData]="headerData" />
 
 
-<app-sidebar [menuItems]="menuItems">
-  <div class="my-5 lg:my-2">
-    <app-sub-menu [processes]="webProcesses" />
-  </div>
-</app-sidebar>
+  <app-sidebar [menuItems]="menuItems">
+    <div class="my-5 lg:my-2">
+      <app-sub-menu [processes]="webProcesses" />
+    </div>
+  </app-sidebar>
+
+  <!-- <div class="fixed w-full bottom-0">
+    <app-footer />
+  </div> -->
+
