fix: show icons in sidebar & sub-menu

--- a/src/app/components/shared/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/components/shared/sidebar-menu/sidebar-menu.component.html
@@ -7,7 +7,7 @@
       role="button"
       tabindex="0"
     >
-      <i [class]="`${item.icon} text-primary text-xl`"></i>
+      <i [class]="`pi ${item.icon} text-primary text-xl`"></i>
       <span class="font-semibold text-gray-900">{{ item.label }}</span>
     </div>
   }
