--- a/src/app/components/shared/sub-menu/sub-menu.component.html
+++ b/src/app/components/shared/sub-menu/sub-menu.component.html
@@ -7,7 +7,7 @@
       <ng-template pTemplate="header">
         <div class="flex justify-content-between align-items-center px-3 py-2 border-bottom-1 surface-border">
           <span class="text-lg font-bold text-900">{{ process.title }}</span>
-          <i [class]="process.icon" class="text-2xl text-primary"></i>
+          <i [class]="process.icon" class="pi text-2xl text-primary"></i>
         </div>
       </ng-template>
 
