feat: add home page with title and search input

--- a/src/app/pages/home/home-page.component.scss
+++ b/src/app/pages/home/home-page.component.scss
@@ -62,4 +62,15 @@
   .min-h-95vh {
     min-height: 90vh;
   }
+
+  p-panel {
+    .pi-search-plus {
+      font-size: 20px !important;
+
+      @media (max-width: 768px) {
+        font-size: 18px !important;
+      }
+    }
+  }
+
 }
