--- a/src/app/pages/home/home-page.component.html
+++ b/src/app/pages/home/home-page.component.html
@@ -1,11 +1,30 @@
-<div class="min-h-95vh flex flex-wrap justify-content-around align-items-center gap-4 p-4">
-  @for (terminal of cargoTerminals; track $index) {
-    <div style="width: 400px;"
-    pAnimateOnScroll
-    enterClass="animate-enter fade-in-10 slide-in-from-t-20 animate-duration"
-    leaveClass="animate-leave fade-out-0"
-    >
-      <app-terminal-card [terminal]="terminal"/>
+<p-panel
+  styleClass="shadow-0 border-none"
+  [toggleable]="true"
+  [collapsed]="true"
+  expandIcon="pi pi-search-minus"
+  collapseIcon="pi pi-search-plus"
+>
+  <ng-template #header>
+    <span class="text-sm md:text-base lg:text-lg font-bold">
+      سازمان راهداری و حمل نقل جاده ایی استان اصفهان
+    </span>
+  </ng-template>
+
+  <div class="flex justify-center items-center p-3 w-full">
+    <div class="w-full">
+      <app-search-input
+        class="w-full" (valueChange)="handleSearch($event)"
+      />
     </div>
+  </div>
+</p-panel>
+
+<div class="min-h-90vh flex flex-wrap justify-content-around align-items-center gap-4 p-4">
+  @for (terminal of displayedCargoTerminals; track $index) {
+  <div style="width: 400px;" pAnimateOnScroll enterClass="animate-enter fade-in-10 slide-in-from-t-20 animate-duration"
+    leaveClass="animate-leave fade-out-0">
+    <app-terminal-card [terminal]="terminal" />
+  </div>
   }
 </div>
