feat(components/shared)[footer]: update footer
The footer now is a simple string. It's a thin line of name at the
bottom which is fixed.

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,101 +1,8 @@
-<div class="card bg-primary-700 p-2 m-2 border-round">
-  <div class="flex justify-content-between">
-    <div class="flex flex-column align-content-center justify-content-center flex-wrap w-9">
-      <label class="flex align-items-center justify-content-center">راه‌های ارتباطی با سامانه</label>
-      <div class="flex w-full align-content-center justify-content-center flex-wrap">
-        <div class=" m-2 align-items-center justify-content-center" >
-          <p-button
-            (click)="CallUsOnPhone.toggle($event)"
-            icon="pi pi-phone"
-            label="شماره های تماس"
-          />
-          <p-popover #CallUsOnPhone>
-            <div class="flex justify-content-between align-content-center m-2">
-              <label class="flex align-items-center justify-content-center"
-                >انجمن رانندگان</label
-              >
-              <p-button
-                severity="info"
-                [raised]="true"
-                icon="pi pi-clipboard"
-                [rounded]="true"
-                label="03134721839"
-                (onClick)="copyToClipboard()"
-                class="flex align-items-center justify-content-center mr-2"
-              />
-            </div>
-            <div class="flex justify-content-between align-content-center m-2">
-              <label class="flex align-items-center justify-content-center"
-                >انجمن کامیونداران</label
-              >
-              <p-button
-                severity="info"
-                [raised]="true"
-                icon="pi pi-clipboard"
-                [rounded]="true"
-                label="03134721839"
-                (onClick)="copyToClipboard()"
-                class="flex align-items-center justify-content-center mr-2"
-              />
-            </div>
-            <div class="flex justify-content-between align-content-center m-2">
-              <label class="flex align-items-center justify-content-center"
-                >انجمن شرکت‌ها</label
-              >
-              <p-button
-                severity="info"
-                [raised]="true"
-                icon="pi pi-clipboard"
-                [rounded]="true"
-                label="03134721839"
-                (onClick)="copyToClipboard()"
-                class="flex align-items-center justify-content-center mr-2"
-              />
-            </div>
-          </p-popover>
-        </div>
-
-        <div class=" m-2 align-items-center justify-content-center">
-          <p-button (click)="showDialog()" label="ارتباط مستقیم با پشتیبانی" />
-          <p-dialog
-            draggable="false"
-            header="درخواست ارسال تیکت"
-            [modal]="true"
-            [(visible)]="dialog"
-          >
-            <span class="p-text-secondary block mb-5"
-              >لطفا بعد از پر کردن اطلاعات، متن تیکت خود را وارد نمایید.<br /><br />همکاران
-              ما در اسرع وقت پاسخگو خواهند بود.</span
-            >
-            <div class="m-2">
-              <app-captcha-input></app-captcha-input>
-            </div>
-
-            <div class="m-2">
-              <app-text-area-input></app-text-area-input>
-            </div>
-
-            <div class="flex justify-end gap-2">
-              <p-button label="ارسال" (click)="submitTicket()" />
-
-              <p-button
-                label="انصراف"
-                severity="secondary"
-                (click)="dialog = false"
-              />
-            </div>
-          </p-dialog>
-        </div>
-      </div>
-    </div>
-
-    <p-divider layout="vertical" />
-
-    <div class="flex justify-content-center w-9">
-      <p class="text-center align-items-center justify-content-center md:text-center">
-        سامانه جامع حمل و نقل کالا<br />اداره کل راهداری و حمل و نقل جاده ای
-        استان اصفهان
-      </p>
-    </div>
-  </div>
+<div class="flex justify-content-center card bg-primary">
+  <p
+    class="text-xs align-items-center justify-content-center p-0 m-0"
+  >
+    سامانه جامع حمل و نقل کالا اداره کل راهداری و حمل و نقل جاده ای استان
+    اصفهان
+  </p>
 </div>
