feat(components/shared)[header]: update header
The side bar icon was too much close to the edge of the page. I moved it
a little.

--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,5 +1,5 @@
-<header class="sticky-header sticky bg-primary">
-  <p-button styleClass="lg:hidden" (onClick)="openSidebar()">
+<header class="sticky-header sticky bg-primary pr-2 pt-2">
+  <p-button class="" styleClass="lg:hidden" (onClick)="openSidebar()">
       <i class="pi pi-align-right text-xl"></i>
   </p-button>
   <div class="flex align-items-center justify-content-between px-3 py-2">
