feat(constants)[Titles]: add global variable for app titles
By using the appTitles variable, we will be able to handle titles
easily.

--- a/src/app/pages/home/home-page.component.html
+++ b/src/app/pages/home/home-page.component.html
@@ -7,7 +7,7 @@
 >
   <ng-template #header>
     <span class="text-sm md:text-base lg:text-lg font-bold">
-      سازمان راهداری و حمل نقل جاده ایی استان اصفهان
+      {{headerTitle}}
     </span>
   </ng-template>
 
