--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -1,6 +1,5 @@
 <form class="flex flex-column gap-5" [formGroup]="loginForm" (ngSubmit)="onSubmit()" >
-  <h3 class="text-center mb-3">
-    سامانه جامع حمل و نقل کالا<br>اداره کل راهداری و حمل و نقل جاده ای استان اصفهان
+  <h3 class="text-center mb-3" [innerHTML]="loginTitle">
   </h3>
 
   <div class="flex flex-column gap-5">
