--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,8 +1,5 @@
 <div class="flex justify-content-center card bg-primary">
-  <p
-    class="text-xs align-items-center justify-content-center p-0 m-0"
-  >
-    سامانه جامع حمل و نقل کالا اداره کل راهداری و حمل و نقل جاده ای استان
-    اصفهان
+  <p class="text-xs align-items-center justify-content-center p-0 m-0">
+    {{ footerTitle }}
   </p>
 </div>
