--- a/src/app/components/shared/terminal-card/terminal-card.component.html
+++ b/src/app/components/shared/terminal-card/terminal-card.component.html
@@ -1,17 +1,24 @@
 @if (terminal) {
-  <p-card styleClass="w-full shadow-8 border-round-lg p-4">
-    <ng-template #header>
-      <div class="text-xl font-bold text-primary mb-3">
-        {{ terminal.name }}
-      </div>
-    </ng-template>
-    <div class="mb-4 text-gray-700">
-      {{ terminal.description }}
+<p-card styleClass="w-full shadow-8 border-round-lg px-4 h-10rem">
+  <ng-template #header>
+    <div class="text-md md:text-lg font-bold text-primary mt-3">
+      {{ terminal.LAPTitle }}
     </div>
-    <div class="flex justify-content-center">
-      <a [href]="getLoginLink()">
-        <p-button label="ورود به صفحه" styleClass="px-6 text-md"  />
-      </a>
-    </div>
-  </p-card>
+  </ng-template>
+
+  @if (terminal.Description.trim() != '') {
+  <div class="mb-4 text-gray-700">
+    {{ terminal.Description }}
+  </div>
+  }
+
+  <div class="flex justify-content-center">
+    <a [href]="getLoginLink()">
+      <p-button
+        label="ورود به صفحه"
+        styleClass="w-9rem  md:w-full md:px-6 text-sm md:text-base"
+      />
+    </a>
+  </div>
+</p-card>
 }
