--- a/src/app/pages/home/home-page.component.html
+++ b/src/app/pages/home/home-page.component.html
@@ -7,23 +7,27 @@
 >
   <ng-template #header>
     <span class="text-sm md:text-base lg:text-lg font-bold">
-      {{headerTitle}}
+      {{ headerTitle }}
     </span>
   </ng-template>
 
   <div class="flex justify-center items-center p-3 w-full">
     <div class="w-full">
-      <app-search-input
-        class="w-full" (valueChange)="handleSearch($event)"
-      />
+      <app-search-input class="w-full" (valueChange)="handleSearch($event)" />
     </div>
   </div>
 </p-panel>
 
-<div class="min-h-90vh flex flex-wrap justify-content-around align-items-center gap-4 p-4">
-  @for (terminal of displayedCargoTerminals; track $index) {
-  <div style="width: 400px;" pAnimateOnScroll enterClass="animate-enter fade-in-10 slide-in-from-t-20 animate-duration"
-    leaveClass="animate-leave fade-out-0">
+<div
+  class="min-h-90vh flex flex-wrap justify-content-around align-items-center gap-4 p-4"
+>
+  @for (terminal of displayedLoadAnnouncementPlaces; track $index) {
+  <div
+    class="w-10rem md:w-20rem"
+    pAnimateOnScroll
+    enterClass="animate-enter fade-in-10 slide-in-from-t-20 animate-duration"
+    leaveClass="animate-leave fade-out-0"
+  >
     <app-terminal-card [terminal]="terminal" />
   </div>
   }
