--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,22 @@
   font-style: normal;
 }
 
+html,
 body {
   font-family: "Yekan", sans-serif;
+  padding: 0;
+  margin: 0;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
+a {
+  text-decoration: none;
+}
+
+input.border-red-500:focus {
+  border-color: var(--p-danger-color) !important;
+  box-shadow: none !important;
+  outline: none !important;
 }
