--- a/src/app/components/shared/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/components/shared/sidebar-menu/sidebar-menu.component.html
@@ -2,13 +2,13 @@
   @for (item of items; track $index) {
     <div
       (click)="item.command()"
-      class="w-full flex align-items-center text-md gap-3 px-4 py-2 surface-section
+      class="w-full flex align-items-center text-md gap-3 px-4 py-2
       h-3-5rem rounded-md cursor-pointer hover:surface-100 transition-shadow duration-200"
       role="button"
       tabindex="0"
     >
       <i [class]="`pi ${item.icon} text-primary text-xl`"></i>
-      <span class="font-semibold text-gray-900">{{ item.label }}</span>
+      <span class="font-semibold text-700">{{ item.label }}</span>
     </div>
   }
 </div>
