--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -4,27 +4,27 @@
 </ng-template>
 
 @if (isMobile) {
-  <p-drawer styleClass="w-18rem" [(visible)]="isOpen" position="right">
-    <app-sidebar-menu [items]="menuItems" />
-  </p-drawer>
+<p-drawer styleClass="w-18rem"
+  (onHide)="onDrawerClose()"
+  [visible]="(isOpen$ | async) ?? false"
+  position="right">
+  <app-sidebar-menu [items]="menuItems" />
+</p-drawer>
 
-  <div>
-    <ng-container [ngTemplateOutlet]="contentTemplate"></ng-container>
-  </div>
+<div>
+  <ng-container [ngTemplateOutlet]="contentTemplate"></ng-container>
+</div>
 }
 @else {
-  <div class="flex">
-    <!-- Sidebar -->
-    <div
-      [style.width]="width"
-      class="h-screen fixed top-1 shadow-6 overflow-auto px-2 border-noround"
-    >
-      <app-sidebar-menu  [items]="menuItems"/>
-    </div>
-
-    <!-- Main content -->
-    <div class="flex-1 p-4" [style.marginRight]="width">
-      <ng-container [ngTemplateOutlet]="contentTemplate"></ng-container>
-    </div>
+<div class="flex">
+  <!-- Sidebar -->
+  <div [style.width]="width" class="h-screen fixed top-1 shadow-6 overflow-auto px-2 border-noround">
+    <app-sidebar-menu [items]="menuItems" />
   </div>
+
+  <!-- Main content -->
+  <div class="flex-1 p-4" [style.marginRight]="width">
+    <ng-container [ngTemplateOutlet]="contentTemplate"></ng-container>
+  </div>
+</div>
 }
