--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -11,6 +11,7 @@
   <app-sidebar-menu [items]="menuItems" />
 </p-drawer>
 
+<app-tab-bar class="fixed w-full"/>
 <div>
   <ng-container [ngTemplateOutlet]="contentTemplate"></ng-container>
 </div>
@@ -23,7 +24,8 @@
   </div>
 
   <!-- Main content -->
-  <div class="flex-1 min-w-0" [style.marginRight]="width">
+  <div class="flex-1 min-w-0" style="position: relative;" [style.marginRight]="width">
+    <app-tab-bar style="position: sticky; top: 60px; width: 100%;" />
     <ng-container [ngTemplateOutlet]="contentTemplate"></ng-container>
   </div>
 </div>
