style(header): add min-height to header for consistent layout spacing

--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="sticky-header sticky bg-primary pr-2 pt-2">
+<header class="sticky-header sticky bg-primary pr-2 pt-2" style="min-height: 60px;">
   <p-button class="" styleClass="lg:hidden" (onClick)="openSidebar()">
       <i class="pi pi-align-right text-xl"></i>
   </p-button>
