--- a/src/app/components/tabs/user-management-tab/user-management-tab.component.html
+++ b/src/app/components/tabs/user-management-tab/user-management-tab.component.html
@@ -10,7 +10,7 @@
             </div>
         </p-tabpanel>
         <p-tabpanel value="1">
-            <p>در دست توسعه</p>
+            <app-users-menu-access-form />
         </p-tabpanel>
     </p-tabpanels>
 </p-tabs>
