refactor(driver-info): clean up component structure and code

--- a/src/app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component.html
@@ -27,17 +27,10 @@
         placeholder="جستجو براساس شماره ملی راننده"
       />
       <p-button
-        (click)="loadDriverInfoFromOutdoorApi()"
+        (click)="loadDriverInfoFromAPI()"
         [disabled]="this.searchForm.invalid"
         size="small"
         severity="info"
-        label="استعلام از سازمان"
-      />
-      <p-button
-        (click)="loadDriverInfoFromLocalApi()"
-        [disabled]="this.searchForm.invalid"
-        size="small"
-        severity="warn"
         label="استعلام از سامانه"
       />
     </div>
