--- a/src/app/components/forms/truck-driver-manages-form/truck-info-form/truck-info-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/truck-info-form/truck-info-form.component.html
@@ -1,1 +1,149 @@
-<h3>ناوگان</h3>
+<div class="p-fluid grid gap-4 relative">
+  <!-- Loading Spinner -->
+  @if (loading) {
+
+  <div
+    style="position: absolute"
+    class="h-full z-5 flex align-items-center justify-content-center w-full"
+  >
+    <div
+      style="position: absolute; opacity: 0.2"
+      class="h-full w-full bg-white"
+    ></div>
+    <i class="pi pi-spin pi-spinner primary" style="font-size: 5rem"></i>
+  </div>
+
+  }
+
+  <!-- Search Form -->
+  <form
+    class="col-12 mt-4"
+    [class.pointer-events-none]="loading"
+    [class.opacity-60]="loading"
+    (ngSubmit)="loadTruckInfoFromAPI()"
+  >
+    <div class="flex gap-2">
+      <app-generic-input
+        [control]="searchSmartCard"
+        validationField="smartCard"
+        icon="pi pi-id-card"
+        class="flex-1"
+        placeholder="جستجو براساس شماره ملی راننده"
+      ></app-generic-input>
+
+      <p-button
+        type="submit"
+        [disabled]="searchForm.invalid || loading"
+        size="small"
+        severity="warn"
+        label="استعلام از سیستم"
+      ></p-button>
+    </div>
+  </form>
+
+  <!-- Truck Info & Nativeness Form -->
+  <form
+    class="p-fluid grid gap-2 col-12"
+    [class.pointer-events-none]="loading"
+    [class.opacity-60]="loading"
+  >
+    <span class="text-lg font-bold">اطلاعات ناوگان</span>
+    <div class="p-fluid grid gap-4 col-12">
+      <div class="grid col-12 gap-4">
+        <div class="col-12 md:col-5">
+          <app-generic-input
+            label="کد ناوگان"
+            class="flex-1"
+            placeholder="کد ناوگان"
+            [readOnly]="true"
+            [control]="truckId"
+            validationField="truckId"
+            [addonWidth]="addonWidth"
+          ></app-generic-input>
+        </div>
+
+        <div class="col-12 md:col-5">
+          <app-generic-input
+            label="سریال"
+            class="flex-1"
+            placeholder="کدملی راننده"
+            [control]="serialNumber"
+            validationField="serialNumber"
+            [readOnly]="true"
+            [addonWidth]="addonWidth"
+          ></app-generic-input>
+        </div>
+
+        <div class="col-12 md:col-5">
+          <app-generic-input
+            label="شماره هوشمند"
+            class="flex-1"
+            placeholder="شماره هوشمند"
+            [control]="smartCard"
+            validationField="smartCard"
+            [readOnly]="true"
+            [addonWidth]="addonWidth"
+          ></app-generic-input>
+        </div>
+
+        <div class="col-12 md:col-5">
+          <app-generic-input
+            label="بارگیر"
+            class="flex-1"
+            placeholder="نوع بارگیر"
+            [control]="loaderType"
+            validationField="loaderType"
+            [addonWidth]="addonWidth"
+          ></app-generic-input>
+        </div>
+      </div>
+    </div>
+  </form>
+
+  <form
+    class="p-fluid grid gap-2 col-12"
+    [class.pointer-events-none]="loading"
+    [class.opacity-60]="loading"
+  >
+    <span class="text-lg font-bold">بومی گری</span>
+    <div class="p-fluid grid gap-4 col-12">
+      <div class="grid col-12 gap-4">
+        <div class="col-12 md:col-5">
+          <app-generic-input
+            label="بومی"
+            class="flex-1"
+            placeholder="بومی / غیر بومی"
+            [control]="nativeness"
+            validationField="nativeness"
+            [readOnly]="true"
+            [addonWidth]="addonWidth"
+          ></app-generic-input>
+        </div>
+
+        <div class="col-12 md:col-5">
+          <app-generic-input
+            class="flex-1"
+            type="date"
+            label="تاریخ اتمام"
+            placeholder="تاریخ اتمام"
+            [control]="truckNativenessExpiredDate"
+            validationField="truckNativenessExpiredDate"
+            [readOnly]="true"
+            [addonWidth]="addonWidth"
+          ></app-generic-input>
+        </div>
+      </div>
+    </div>
+    <!-- Action Buttons -->
+    <div
+      class="col-12 md:flex md:flex-row-reverse md:flex-wrap gap-3 align-items-center"
+    >
+      <p-button
+        (click)="changeNativeness()"
+
+        label="تغییر وضعیت بومی گری"
+        styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-12rem lg:w-15rem"
+      ></p-button>
+    </div>
+  </form>
+</div>
