--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -10,6 +10,6 @@
 
 <app-support-button></app-support-button>
 
-<div class="fixed w-full bottom-0">
+<div class="fixed w-full bottom-0 z-10">
   <app-footer />
 </div>
