fix(truck-info-form): fix api truckInfo with empty smartCard

--- a/src/app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component.html
@@ -37,7 +37,7 @@
   </form>
 
   <div
-    class="p-fluid grid gap-4 relative"
+    class="p-fluid grid gap-4 relative px-4"
     [class.pointer-events-none]="loading"
     [class.opacity-60]="loading"
   >
