fix(truck-info-form): fix placeholder search input

--- a/src/app/components/forms/truck-driver-manages-form/truck-info-form/truck-info-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/truck-info-form/truck-info-form.component.html
@@ -29,7 +29,7 @@
         validationField="smartCard"
         icon="pi pi-id-card"
         class="flex-1"
-        placeholder="جستجو براساس شماره ملی راننده"
+        placeholder="جستجو براساس شماره هوشمند"
       ></app-generic-input>
 
       <p-button
