--- a/src/app/components/shared/inputs/number-input/generic-input.component.html
+++ b/src/app/components/shared/inputs/number-input/generic-input.component.html
@@ -1,89 +1,91 @@
 <div class="flex w-full">
   <p-input-group styleClass="h-2-5rem w-full">
-    @if (label.trim() == '') {
-    <!-- Icon -->
-    <p-inputgroup-addon
-      class="bg-primary text-white flex items-center justify-center px-3 border-round-right"
-    >
-      <i [class]="icon"></i>
-    </p-inputgroup-addon>
-    }@else{
-    <!-- Label -->
-    <p-inputgroup-addon
-      class="bg-primary border-round-right flex align-items-center justify-content-center"
-      [style.width]="addonWidth"
-    >
-      <span class="text-sm" style="white-space: nowrap">{{ label }}</span>
-    </p-inputgroup-addon>
-    } @if (type == "text") {
-    <!-- Input -->
-    <input
-      #inputRef
-      pInputText
-      [formControl]="control"
-      [placeholder]="placeholder"
-      [readOnly]="readOnly"
-      [disabled]="disabled"
-      [ngClass]="{
-        'border-red-500': control.touched && control.invalid,
-        border: true,
-        'border-round-left': buttonIcon == '',
-        'px-2': true,
-        'h-full': true,
-        'w-full': true,
-        'bg-gray-100 text-gray-500 pointer-events-none opacity-60 cursor-not-allowed':
-          disabled
-      }"
-      (focus)="onFocusInput(inputRef)"
-      (blur)="onBlurInput(inputRef)"
-    />
-    } @if (type=='date') {
-      <div class="w-full" style="position: relative;">
+    @if (label.trim() === '') {
+      <!-- Icon Addon -->
+      <p-inputgroup-addon
+        class="bg-primary text-white flex items-center justify-center px-3 border-round-right"
+      >
+        <i [class]="icon"></i>
+      </p-inputgroup-addon>
+    } @else {
+      <!-- Label Addon -->
+      <p-inputgroup-addon
+        class="bg-primary border-round-right flex align-items-center justify-content-center"
+        [style.width]="addonWidth"
+      >
+        <span class="text-sm" style="white-space: nowrap">{{ label }}</span>
+      </p-inputgroup-addon>
+    }
 
-        <ng-persian-datepicker>
-          <div class="h-2-5rem">
-        <input
+    @if (type === 'text') {
+      <!-- Text Input -->
+      <input
         #inputRef
         pInputText
         [formControl]="control"
         [placeholder]="placeholder"
         [readOnly]="readOnly"
-        [disabled]="disabled"
         [ngClass]="{
           'border-red-500': control.touched && control.invalid,
           border: true,
-          'border-round-left': buttonIcon == '',
+          'border-round-left': buttonIcon === '',
           'px-2': true,
           'h-full': true,
           'w-full': true,
           'bg-gray-100 text-gray-500 pointer-events-none opacity-60 cursor-not-allowed':
-          disabled
+            control.disabled
         }"
-          (focus)="onFocusInput(inputRef)"
-          (blur)="onBlurInput(inputRef)"
-          />
-        </div>
-      </ng-persian-datepicker>
-    </div>
+        (focus)="onFocusInput(inputRef)"
+        (blur)="onBlurInput(inputRef)"
+      />
+    } @if (type === 'date') {
+      <!-- Date Input -->
+      <div class="w-full" style="position: relative;">
+        <ng-persian-datepicker>
+          <div class="h-2-5rem">
+            <input
+              #inputRef
+              pInputText
+              [formControl]="control"
+              [placeholder]="placeholder"
+              [readOnly]="readOnly"
+              [ngClass]="{
+                'border-red-500': control.touched && control.invalid,
+                border: true,
+                'border-round-left': buttonIcon === '',
+                'px-2': true,
+                'h-full': true,
+                'w-full': true,
+                'bg-gray-100 text-gray-500 pointer-events-none opacity-60 cursor-not-allowed':
+                  control.disabled
+              }"
+              (focus)="onFocusInput(inputRef)"
+              (blur)="onBlurInput(inputRef)"
+            />
+          </div>
+        </ng-persian-datepicker>
+      </div>
     }
   </p-input-group>
 
-  @if (buttonIcon.trim() != '') {
-  <p-inputgroup-addon class="flex items-center justify-center">
-    <p-button
-      [icon]="buttonIcon"
-      [disabled]="buttonDisabled"
-      (click)="handleClick()"
-      styleClass="border-round-left h-full w-full"
-      class="w-full h-full"
-    />
-  </p-inputgroup-addon>
+  @if (buttonIcon.trim() !== '') {
+    <!-- Button Addon -->
+    <p-inputgroup-addon class="flex items-center justify-center">
+      <p-button
+        [icon]="buttonIcon"
+        [disabled]="buttonDisabled"
+        (click)="handleClick()"
+        styleClass="border-round-left h-full w-full"
+        class="w-full h-full"
+      />
+    </p-inputgroup-addon>
   }
 </div>
+
 @if (control.touched && firstErrorMessage) {
-<div class="px-3 mt-1">
-  <p-message severity="error" variant="simple" size="small">
-    {{ firstErrorMessage }}
-  </p-message>
-</div>
+  <div class="px-3 mt-1">
+    <p-message severity="error" variant="simple" size="small">
+      {{ firstErrorMessage }}
+    </p-message>
+  </div>
 }
